--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A Front-End Web Developer with proficiency in React, SASS, Bootstrap, HTML and CSS."
     />
+    <meta name="robots" content="index,follow">
+    <!--Google fonts-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@800&family=Roboto&display=swap" rel="stylesheet">
-
-    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
-
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Pattaya&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -29,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Rajiv Titus - Portfolio</title>
+    <title>Rajiv Titus | Web Developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
