Added Capture project description

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="A Front-End Web Developer with proficiency in React, SASS, Bootstrap, HTML and CSS."
+      content="A Web Developer with proficiency in React, JavaScript, Node.js, SASS, HTML and CSS."
     />
     <meta name="robots" content="index,follow">
     <!--Google fonts-->
